fix overflow

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html, body {
   align-items: center;
   height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 
 .flag {
